# project4

./: AddAutomaton.cpp  AddAutomaton.h  BlockCommentAutomata.cpp  BlockCommentAutomata.h  CMakeLists.txt  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  InvalidStringAutomaton.cpp  InvalidStringAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QMarkAutomaton.h  (+27 more)
